fix: fix the index.html

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>Coder</title>
 
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/renderer.tsx"></script>
+    <script type="module" src="./src/renderer.tsx"></script>
   </body>
 </html>
